[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/env/background.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/font/thaleah_fat.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://scripts/interface/initial_screen.gd" type="Script" id=3]
[ext_resource path="res://assets/player/playerUmbrellaALL.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=1]
size = 32
outline_size = 4
outline_color = Color( 0.0117647, 0.0117647, 0.0117647, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
outline_size = 4
outline_color = Color( 0.0117647, 0.0117647, 0.0117647, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 20
outline_color = Color( 0.0117647, 0.0117647, 0.0117647, 1 )
font_data = ExtResource( 2 )

[node name="InitialScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="Background" parent="." instance=ExtResource( 1 )]
can_process = true

[node name="Menu" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="GameName" type="Label" parent="Menu"]
margin_left = 20.0
margin_top = 12.0
margin_right = 40.0
margin_bottom = 14.0
custom_constants/shadow_offset_x = 4
custom_constants/shadow_offset_y = 4
custom_fonts/font = SubResource( 1 )
text = "Jornada 
Youkai"
valign = 1

[node name="ButtonContainer" type="VBoxContainer" parent="Menu"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -80.0
margin_top = -88.0
margin_right = -20.0
margin_bottom = -20.0

[node name="Play" type="Button" parent="Menu/ButtonContainer" groups=["button"]]
margin_right = 60.0
margin_bottom = 20.0
rect_min_size = Vector2( 60, 0 )
focus_mode = 0
enabled_focus_mode = 0
flat = true

[node name="Label" type="Label" parent="Menu/ButtonContainer/Play"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/shadow_offset_x = 4
custom_constants/shadow_offset_y = 4
custom_fonts/font = SubResource( 2 )
text = "Play"
align = 2
valign = 1

[node name="Continue" type="Button" parent="Menu/ButtonContainer" groups=["button"]]
visible = false
margin_top = 24.0
margin_right = 60.0
margin_bottom = 44.0
rect_min_size = Vector2( 60, 0 )
focus_mode = 0
disabled = true
enabled_focus_mode = 0
flat = true

[node name="Label" type="Label" parent="Menu/ButtonContainer/Continue"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/shadow_offset_x = 4
custom_constants/shadow_offset_y = 4
custom_fonts/font = SubResource( 2 )
text = "Continue"
align = 2
valign = 1

[node name="Quit" type="Button" parent="Menu/ButtonContainer" groups=["button"]]
margin_top = 24.0
margin_right = 60.0
margin_bottom = 44.0
rect_min_size = Vector2( 60, 0 )
focus_mode = 0
enabled_focus_mode = 0
flat = true

[node name="Label" type="Label" parent="Menu/ButtonContainer/Quit"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/shadow_offset_x = 4
custom_constants/shadow_offset_y = 4
custom_fonts/font = SubResource( 2 )
text = "Quit"
align = 2
valign = 1

[node name="SkinSelect" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="BackButton" type="Button" parent="SkinSelect" groups=["button"]]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -80.0
margin_top = 12.0
margin_right = -20.0
margin_bottom = 32.0
rect_min_size = Vector2( 60, 0 )
focus_mode = 0
enabled_focus_mode = 0
flat = true

[node name="Label" type="Label" parent="SkinSelect/BackButton"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/shadow_offset_x = 4
custom_constants/shadow_offset_y = 4
custom_fonts/font = SubResource( 2 )
text = "Back"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="GameName" type="Label" parent="SkinSelect"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -122.0
margin_top = -63.0
margin_right = -20.0
margin_bottom = 7.0
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 0
custom_constants/shadow_as_outline = 0
custom_fonts/font = SubResource( 3 )
text = "Selecione a
personagem"
valign = 1

[node name="SkinContainer" type="HBoxContainer" parent="SkinSelect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -40.0
margin_right = 20.0

[node name="Sayuri" type="Button" parent="SkinSelect/SkinContainer" groups=["button"]]
margin_right = 12.0
margin_bottom = 40.0
focus_mode = 0
enabled_focus_mode = 0
flat = true

[node name="TextureRect" type="TextureRect" parent="SkinSelect/SkinContainer/Sayuri"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 52.0
margin_bottom = 24.0
texture = ExtResource( 4 )
expand = true
stretch_mode = 2
